crates/mnn-sys/src/mnn_c.rs


unsafe extern "C" {
    pub fn Tensor_create(dimSize: core::ffi::c_int, type_: DimensionType) -> *mut Tensor;
    pub fn Tensor_createFromTensor(
        tensor: *const Tensor,
        type_: DimensionType,
        allocMemory: core::ffi::c_int,
    ) -> *mut Tensor;
    pub fn Tensor_destroy(tensor: *mut Tensor);
    pub fn Tensor_createDevice(
        shape: *const core::ffi::c_int,
        shapeSize: usize,
        typeCode: halide_type_t,
        dimType: DimensionType,
    ) -> *mut Tensor;
    pub fn Tensor_createWith(
        shape: *const core::ffi::c_int,
        shapeSize: usize,
        typeCode: halide_type_t,
        data: *mut core::ffi::c_void,
        dimType: DimensionType,
    ) -> *mut Tensor;
    pub fn Tensor_copyFromHostTensor(
        deviceTensor: *mut Tensor,
        hostTensor: *const Tensor,
    ) -> core::ffi::c_int;
    pub fn Tensor_copyToHostTensor(
        deviceTensor: *const Tensor,
        hostTensor: *mut Tensor,
    ) -> core::ffi::c_int;
    pub fn Tensor_createHostTensorFromDevice(
        deviceTensor: *const Tensor,
        copyData: core::ffi::c_int,
    ) -> *mut Tensor;
    pub fn Tensor_getDimensionType(tensor: *const Tensor) -> DimensionType;
    pub fn Tensor_buffer(tensor: *const Tensor) -> *const halide_buffer_t;
    pub fn Tensor_buffer_mut(tensor: *mut Tensor) -> *mut halide_buffer_t;
    pub fn Tensor_host(tensor: *const Tensor) -> *const core::ffi::c_void;
    pub fn Tensor_host_mut(tensor: *mut Tensor) -> *mut core::ffi::c_void;
    pub fn Tensor_deviceId(tensor: *const Tensor) -> u64;
    pub fn Tensor_dimensions(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_shape(tensor: *const Tensor) -> TensorShape;
    pub fn Tensor_size(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_usize(tensor: *const Tensor) -> usize;
    pub fn Tensor_elementSize(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_width(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_height(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_channel(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_batch(tensor: *const Tensor) -> core::ffi::c_int;
    pub fn Tensor_stride(tensor: *const Tensor, index: core::ffi::c_int) -> core::ffi::c_int;
    pub fn Tensor_length(tensor: *const Tensor, index: core::ffi::c_int) -> core::ffi::c_int;
    pub fn Tensor_setStride(tensor: *mut Tensor, index: core::ffi::c_int, stride: core::ffi::c_int);
    pub fn Tensor_setLength(tensor: *mut Tensor, index: core::ffi::c_int, length: core::ffi::c_int);
    pub fn Tensor_getDeviceInfo(
        tensor: *const Tensor,
        dst: *mut core::ffi::c_void,
        forwardType: core::ffi::c_int,
    ) -> core::ffi::c_int;
    pub fn Tensor_print(tensor: *const Tensor);
    pub fn Tensor_printShape(tensor: *const Tensor);
    pub fn Tensor_map(
        tensor: *mut Tensor,
        mtype: MapType,
        dtype: DimensionType,
    ) -> *mut core::ffi::c_void;
    pub fn Tensor_unmap(
        tensor: *mut Tensor,
        mtype: MapType,
        dtype: DimensionType,
        mapPtr: *mut core::ffi::c_void,
    );
    pub fn Tensor_clone(tensor: *const Tensor) -> *mut Tensor;
    pub fn Tensor_wait(
        tensor: *mut Tensor,
        mtype: MapType,
        finish: core::ffi::c_int,
    ) -> core::ffi::c_int;
    pub fn Tensor_setDevicePtr(
        tensor: *mut Tensor,
        devicePtr: *const core::ffi::c_void,
        memoryType: core::ffi::c_int,
    ) -> core::ffi::c_int;
    pub fn Tensor_getType(tensor: *const Tensor) -> halide_type_t;
    pub fn Tensor_isTypeOf(tensor: *const Tensor, type_: halide_type_t) -> bool;
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Interpreter {
    _unused: [u8; 0],
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Backend {
    _unused: [u8; 0],
}

#[repr(i32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum RuntimeStatus {
    STATUS_SUPPORT_FP16 = 0,
    STATUS_SUPPORT_DOT_PRODUCT = 1,
    STATUS_SUPPORT_POWER_LOW = 2,
    STATUS_COUNT = 3,
}

unsafe extern "C" {
    pub fn modelPrintIO(model: *const core::ffi::c_char);
    pub fn getVersion() -> *const core::ffi::c_char;
    pub fn Interpreter_createFromFile(file: *const core::ffi::c_char) -> *mut Interpreter;
    pub fn Interpreter_createFromBuffer(
        buffer: *const core::ffi::c_void,
        size: usize,
    ) -> *mut Interpreter;
    pub fn Interpreter_destroy(interpreter: *mut Interpreter);
}

pub mod SessionMode {
    #[cfg(windows)]
    pub type Type = core::ffi::c_int;
    #[cfg(not(windows))]
    pub type Type = u32;

    pub const Session_Debug: Type = 0;
    pub const Session_Release: Type = 1;
    pub const Session_Input_Inside: Type = 2;
    pub const Session_Input_User: Type = 3;
    pub const Session_Output_Inside: Type = 4;
    pub const Session_Output_User: Type = 5;
    pub const Session_Resize_Direct: Type = 6;
    pub const Session_Resize_Defer: Type = 7;
    pub const Session_Backend_Fix: Type = 8;
    pub const Session_Backend_Auto: Type = 9;
    pub const Session_Memory_Collect: Type = 10;
    pub const Session_Memory_Cache: Type = 11;
    pub const Session_Codegen_Disable: Type = 12;
    pub const Session_Codegen_Enable: Type = 13;
    pub const Session_Resize_Check: Type = 14;
    pub const Session_Resize_Fix: Type = 15;
}

unsafe extern "C" {
    pub fn Interpreter_setSessionMode(interpreter: *mut Interpreter, mode: SessionMode::Type);
    pub fn Interpreter_setCacheFile(
        interpreter: *mut Interpreter,
        cacheFile: *const core::ffi::c_char,
        keySize: usize,
    );
    pub fn Interpreter_setExternalFile(
        interpreter: *mut Interpreter,
        file: *const core::ffi::c_char,
        flag: usize,
    );
    pub fn Interpreter_updateCacheFile(
        interpreter: *mut Interpreter,
        session: *mut Session,
    ) -> ErrorCode;
    pub fn Interpreter_setSessionHint(
        interpreter: *mut Interpreter,
        mode: core::ffi::c_int,
        value: core::ffi::c_int,
    );
    pub fn Interpreter_createSession(
        interpreter: *mut Interpreter,
        config: *const MNNScheduleConfig,
    ) -> *mut Session;
    pub fn Interpreter_createMultiPathSession(
        interpreter: *mut Interpreter,
        configs: *const *const MNNScheduleConfig,
        configSize: usize,
    ) -> *mut Session;
    pub fn Interpreter_releaseSession(
        interpreter: *mut Interpreter,
        session: *mut Session,
    ) -> core::ffi::c_int;
    pub fn Interpreter_resizeSession(interpreter: *mut Interpreter, session: *mut Session);
    pub fn Interpreter_resizeSessionWithFlag(
        interpreter: *mut Interpreter,
        session: *mut Session,
        needRelloc: core::ffi::c_int,
    );
    pub fn Interpreter_releaseModel(interpreter: *mut Interpreter);
    pub fn Interpreter_getModelVersion(interpreter: *const Interpreter)
    -> *const core::ffi::c_char;
    pub fn Interpreter_updateSessionToModel(
        interpreter: *mut Interpreter,
        session: *mut Session,
    ) -> ErrorCode;
    pub fn Interpreter_runSession(
        interpreter: *const Interpreter,
        session: *mut Session,
    ) -> ErrorCode;
    pub fn Interpreter_runSessionWithCallBackInfo(
        interpreter: *const Interpreter,
        session: *const Session,
        before: *mut core::ffi::c_void,
        end: *mut core::ffi::c_void,
        sync: core::ffi::c_int,
    ) -> ErrorCode;
    pub fn Interpreter_getSessionInput(
        interpreter: *mut Interpreter,
        session: *const Session,
        name: *const core::ffi::c_char,
    ) -> *mut Tensor;
    pub fn Interpreter_getSessionOutput(
        interpreter: *mut Interpreter,
        session: *const Session,
        name: *const core::ffi::c_char,
    ) -> *mut Tensor;
    pub fn Interpreter_getSessionInfo(
        interpreter: *mut Interpreter,
        session: *const Session,
        code: core::ffi::c_int,
        ptr: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
    pub fn Interpreter_getSessionOutputAll(
        interpreter: *const Interpreter,
        session: *const Session,
    ) -> *const TensorInfoArray;
    pub fn Interpreter_getSessionInputAll(
        interpreter: *const Interpreter,
        session: *const Session,
    ) -> *const TensorInfoArray;
    pub fn Interpreter_resizeTensor(
        interpreter: *mut Interpreter,
        tensor: *mut Tensor,
        dims: *const core::ffi::c_int,
        dimsSize: usize,
    );
    pub fn Interpreter_resizeTensorByNCHW(
        interpreter: *mut Interpreter,
        tensor: *mut Tensor,
        batch: core::ffi::c_int,
        channel: core::ffi::c_int,
        height: core::ffi::c_int,
        width: core::ffi::c_int,
    );
    pub fn Interpreter_getBackend(
        interpreter: *const Interpreter,
        session: *const Session,
        tensor: *const Tensor,
    ) -> *const Backend;
    pub fn Interpreter_bizCode(interpreter: *const Interpreter) -> *const core::ffi::c_char;
    pub fn Interpreter_uuid(interpreter: *const Interpreter) -> *const core::ffi::c_char;
    pub fn OperatorInfo_name(op: *const core::ffi::c_void) -> *const core::ffi::c_char;
    pub fn OperatorInfo_type(op: *const core::ffi::c_void) -> *const core::ffi::c_char;
    pub fn OperatorInfo_flops(op: *const core::ffi::c_void) -> f32;
}
